Closed Bug 1771255 Opened 2 years ago Closed 2 years ago

Assertion failure: PromiseObj(), at /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Promise.h:358

Categories

(Core :: Graphics: WebGPU, defect, P2)

x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
104 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- disabled
firefox102 --- disabled
firefox103 --- disabled
firefox104 --- verified

People

(Reporter: jkratzer, Assigned: jimb)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: regression, testcase, Whiteboard: [bugmon:bisected,confirmed])

Attachments

(2 files)

Testcase found while fuzzing mozilla-central rev 41271d27d65a (built with: --enable-debug --enable-fuzzing).

Testcase can be reproduced using the following commands:

$ pip install fuzzfetch grizzly-framework
$ python -m fuzzfetch --build 41271d27d65a --debug --fuzzing -n firefox
$ python -m grizzly.replay ./firefox/firefox testcase.html
Assertion failure: PromiseObj(), at /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Promise.h:358

    ==1675824==ERROR: UndefinedBehaviorSanitizer: SEGV on unknown address 0x000000000000 (pc 0x7fc33f760fd3 bp 0x7ffe190ce5b0 sp 0x7ffe190ce4b0 T1675824)
    ==1675824==The signal is caused by a WRITE memory access.
    ==1675824==Hint: address points to the zero page.
        #0 0x7fc33f760fd3 in void mozilla::dom::Promise::MaybeSomething<RefPtr<mozilla::webgpu::DeviceLostInfo>&>(RefPtr<mozilla::webgpu::DeviceLostInfo>&, void (mozilla::dom::Promise::*)(JSContext*, JS::Handle<JS::Value>)) /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Promise.h:358:5
        #1 0x7fc33f75952f in MaybeResolve<RefPtr<mozilla::webgpu::DeviceLostInfo> &> /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Promise.h:84:5
        #2 0x7fc33f75952f in mozilla::webgpu::Device::Cleanup() /dom/webgpu/Device.cpp:86:19
        #3 0x7fc33f75932f in mozilla::webgpu::Device::cycleCollection::Unlink(void*) /dom/webgpu/Device.cpp:36:1
        #4 0x7fc33c2a179e in nsCycleCollector::CollectWhite() /xpcom/base/nsCycleCollector.cpp:3074:26
        #5 0x7fc33c2a304b in nsCycleCollector::Collect(mozilla::CCReason, ccIsManual, js::SliceBudget&, nsICycleCollectorListener*, bool) /xpcom/base/nsCycleCollector.cpp:3440:26
        #6 0x7fc33c2a57b3 in nsCycleCollector_collectSlice(js::SliceBudget&, mozilla::CCReason, bool) /xpcom/base/nsCycleCollector.cpp:3925:21
        #7 0x7fc33dfa26ac in nsJSContext::RunCycleCollectorSlice(mozilla::CCReason, mozilla::TimeStamp) /dom/base/nsJSEnvironment.cpp:1452:5
        #8 0x7fc33dfa3a7d in mozilla::CCGCScheduler::CCRunnerFired(mozilla::TimeStamp) /dom/base/nsJSEnvironment.cpp:1592:9
        #9 0x7fc33c368532 in operator() /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/std_function.h:706:14
        #10 0x7fc33c368532 in mozilla::IdleTaskRunner::Run() /xpcom/threads/IdleTaskRunner.cpp:124:14
        #11 0x7fc33c369055 in mozilla::IdleTaskRunnerTask::Run() /xpcom/threads/IdleTaskRunner.cpp:45:15
        #12 0x7fc33c380203 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /xpcom/threads/TaskController.cpp:788:26
        #13 0x7fc33c37eed9 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /xpcom/threads/TaskController.cpp:662:15
        #14 0x7fc33c37f023 in mozilla::TaskController::ProcessPendingMTTask(bool) /xpcom/threads/TaskController.cpp:398:36
        #15 0x7fc33c3a8fd6 in operator() /xpcom/threads/TaskController.cpp:124:37
        #16 0x7fc33c3a8fd6 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_0>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:531:5
        #17 0x7fc33c394aaf in nsThread::ProcessNextEvent(bool, bool*) /xpcom/threads/nsThread.cpp:1180:16
        #18 0x7fc33c39b0ad in NS_ProcessNextEvent(nsIThread*, bool) /xpcom/threads/nsThreadUtils.cpp:465:10
        #19 0x7fc33cf5c006 in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /ipc/glue/MessagePump.cpp:85:21
        #20 0x7fc33ce84567 in MessageLoop::RunInternal() /ipc/chromium/src/base/message_loop.cc:380:10
        #21 0x7fc33ce84472 in RunHandler /ipc/chromium/src/base/message_loop.cc:373:3
        #22 0x7fc33ce84472 in MessageLoop::Run() /ipc/chromium/src/base/message_loop.cc:355:3
        #23 0x7fc3410b1bf8 in nsBaseAppShell::Run() /widget/nsBaseAppShell.cpp:137:27
        #24 0x7fc3431f3a6b in XRE_RunAppShell() /toolkit/xre/nsEmbedFunctions.cpp:874:20
        #25 0x7fc33cf5cefa in mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) /ipc/glue/MessagePump.cpp:235:9
        #26 0x7fc33ce84567 in MessageLoop::RunInternal() /ipc/chromium/src/base/message_loop.cc:380:10
        #27 0x7fc33ce84472 in RunHandler /ipc/chromium/src/base/message_loop.cc:373:3
        #28 0x7fc33ce84472 in MessageLoop::Run() /ipc/chromium/src/base/message_loop.cc:355:3
        #29 0x7fc3431f308c in XRE_InitChildProcess(int, char**, XREChildData const*) /toolkit/xre/nsEmbedFunctions.cpp:733:34
        #30 0x564da66cfe90 in content_process_main /browser/app/../../ipc/contentproc/plugin-container.cpp:57:28
        #31 0x564da66cfe90 in main /browser/app/nsBrowserApp.cpp:338:18
        #32 0x7fc352e96082 in __libc_start_main /build/glibc-SzIz7B/glibc-2.31/csu/../csu/libc-start.c:308:16
        #33 0x564da66a5c3c in _start (/home/jkratzer/builds/mc-debug/firefox-bin+0x15c3c) (BuildId: 84db100a918732cc0264ea219b418046cd03965e)
    
    UndefinedBehaviorSanitizer can not provide additional info.
    SUMMARY: UndefinedBehaviorSanitizer: SEGV /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Promise.h:358:5 in void mozilla::dom::Promise::MaybeSomething<RefPtr<mozilla::webgpu::DeviceLostInfo>&>(RefPtr<mozilla::webgpu::DeviceLostInfo>&, void (mozilla::dom::Promise::*)(JSContext*, JS::Handle<JS::Value>))
    ==1675824==ABORTING
Attached file Testcase

Bugmon Analysis
Verified bug as reproducible on mozilla-central 20220525150600-41271d27d65a.
The bug appears to have been introduced in the following build range:

Start: 72e27e3813d30e65c86439cf91ac67bd58b5fe72 (20220427210409)
End: e400d29510fdc3cfa0686aac82e33d7123529a76 (20220427230157)
Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=72e27e3813d30e65c86439cf91ac67bd58b5fe72&tochange=e400d29510fdc3cfa0686aac82e33d7123529a76

Keywords: regression
Whiteboard: [bugmon:confirm] → [bugmon:bisected,confirmed]

The severity field is not set for this bug.
:jimb, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jimb)

I can reproduce this locally on 41271d27d65a.

Assignee: nobody → jimb
Severity: -- → S3
Status: NEW → ASSIGNED
Flags: needinfo?(jimb)
Priority: -- → P2

:jimb, since this bug contains a bisection range, could you fill (if possible) the regressed_by field?
For more information, please visit auto_nag documentation.

Flags: needinfo?(jimb)
Flags: needinfo?(jimb)
Regressed by: 1709951

Set release status flags based on info from the regressing bug 1709951

Pushed by jblandy@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f2a14024bbe6 Help Device::Cleanup cope when Device::mPromise's JSObject has been cleared. r=nical
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch

Bugmon Analysis
Verified bug as fixed on rev mozilla-central 20220705212856-8d6b4f11ecdf.
Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.

Status: RESOLVED → VERIFIED
Keywords: bugmon
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: