Bug 1771255: Help Device::Cleanup cope when Device::mPromise's JSObject has been cleared. r=nical

Differential Revision: https://phabricator.services.mozilla.com/D150624